Bug 55198 - parent stylesheet not imported property ( xlsx )
Summary: parent stylesheet not imported property ( xlsx )
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.0.0.beta1
Hardware: Other All
: medium major
Assignee: Noel Power
URL:
Whiteboard: target:3.7.0 target:3.6.3
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-09-21 16:28 UTC by Noel Power
Modified: 2013-04-26 02:02 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
test case (7.49 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2012-09-21 16:28 UTC, Noel Power
Details
screenshot showing the problem (109.52 KB, image/png)
2012-09-21 16:43 UTC, Noel Power
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Noel Power 2012-09-21 16:28:45 UTC
Created attachment 67514 [details]
test case

documents with certain formatting ( that is uses a parent cell style ) loose that formatting when imported. ( see attached document )
Comment 1 Noel Power 2012-09-21 16:29:26 UTC
looks like I am responsible for this mess, taking it
Comment 2 Noel Power 2012-09-21 16:29:59 UTC
and its a regression, looked ok in 3.5
Comment 3 Noel Power 2012-09-21 16:43:46 UTC
Created attachment 67515 [details]
screenshot showing the problem

the screenshot shows on the left hand side how 3.6 ( & master ) shows the document and on the right how it should look.

Cell e10 contains a number, the cell is formated as a date ( with number format code 'd' ), additionally the cell content is center aligned and there is some border attributes too
Comment 4 Not Assigned 2012-09-24 09:11:17 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=72d3539e26f0485743126301c438bcb05b02643d

fix parent style import xlsx fdo#55198



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Not Assigned 2012-09-24 16:51:34 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d233567f716594a6b33983e76c537e47a0fade74&g=libreoffice-3-6

fix parent style import xlsx fdo#55198


It will be available in LibreOffice 3.6.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Not Assigned 2012-09-25 10:32:14 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3f79d49058c41a92a2dfe0a284c4adbd1c1f96c3

unit test for  fdo#55198



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Joel Madero 2013-04-26 02:02:17 UTC
Because of regular FDO maintenance we are testing minor release regressions to check to see when the regression was introduced. I was able to confirm this on:

Version: 3.6.0.0.beta1

Updating version to reflect this