fix parent style import xlsx fdo#55198

Change-Id: I77d38eba69ad7aa89b0f9b692e40fd365d002071